--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,11 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/tag-cloud/">标签云</a></li>
+  <li><a href="{{ root_url }}/">首页</a></li>
+    <li><a href="{{ root_url }}#">生活杂谈</a></li>
+    <li><a href="{{ root_url }}#">程序生涯</a></li>
+    <li><a href="{{ root_url }}#">杂七杂八</a></li>
+    <li><a href="{{ root_url }}#">各项清单</a></li>
+    <li><a href="{{ root_url }}#">开源项目</a></li>
+  <li><a href="{{ root_url }}/blog/archives">文章归档</a></li>
+  <li><a href="{{ root_url }}/tag-cloud/">标签</a></li>
+  <li><a href="{{ root_url }}/about">关于</a></li>
 </ul>
