--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,203 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+hgroup{
+    display:inline-block;
+}
+
+#avatar {
+  width: 90px;
+  height: 90px;
+  margin: 0px 20px 0px 0px;
+  background: image-url('avatar_90.jpeg');
+  border-radius: 50%;
+  box-shadow: 0 0 0px 4px white, 0 0 4px 4px #eee;
+  overflow: hidden;
+  display: inline-block; }
+  #avatar:hover {
+    -webkit-animation: spin .35s linear infinite;
+    -moz-animation: spin .35s linear infinite;
+    -ms-animation: spin .35s linear infinite;
+    -o-animation: spin .35s linear infinite;
+    animation: spin .35s linear infinite; }
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    #avatar {
+      width: 60px;
+      height: 60px;
+      background: image-url('avatar_60.jpeg');
+      -webkit-background-size: 60px 60px;
+      -moz-background-size: 60px 60px;  
+      background-size: 60px 60px; } }
+
+/*---------------------------------*\
+   Vendors
+\*---------------------------------*/
+@-webkit-keyframes fadeIn {
+  from {
+    -webkit-transform: translateY(30px);
+    opacity: 0; }
+
+  to {
+    -webkit-transform: translateY(0);
+    opacity: 1; } }
+
+@-moz-keyframes fadeIn {
+  from {
+    -moz-transform: translateY(30px);
+    opacity: 0; }
+
+  to {
+    -moz-transform: translateY(0);
+    opacity: 1; } }
+
+@-ms-keyframes fadeIn {
+  from {
+    -ms-transform: translateY(30px);
+    opacity: 0; }
+
+  to {
+    -ms-transform: translateY(0);
+    opacity: 1; } }
+
+@-o-keyframes fadeIn {
+  from {
+    -o-transform: translateY(30px);
+    opacity: 0; }
+
+  to {
+    -o-transform: translateY(0);
+    opacity: 1; } }
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(30px);
+    opacity: 0; }
+
+  to {
+    transform: translateY(0);
+    opacity: 1; } }
+
+@-webkit-keyframes fadeOut {
+  from {
+    -webkit-transform: translateY(0);
+    opacity: 1; }
+
+  to {
+    -webkit-transform: translateY(-30px);
+    opacity: 0; } }
+
+@-moz-keyframes fadeOut {
+  from {
+    -moz-transform: translateY(0);
+    opacity: 1; }
+
+  to {
+    -moz-transform: translateY(-30px);
+    opacity: 0; } }
+
+@-ms-keyframes fadeOut {
+  from {
+    -ms-transform: translateY(0);
+    opacity: 1; }
+
+  to {
+    -ms-transform: translateY(-30px);
+    opacity: 0; } }
+
+@-o-keyframes fadeOut {
+  from {
+    -o-transform: translateY(0);
+    opacity: 1; }
+
+  to {
+    -o-transform: translateY(-30px);
+    opacity: 0; } }
+
+@keyframes fadeOut {
+  from {
+    transform: translateY(0);
+    opacity: 1; }
+
+  to {
+    transform: translateY(-30px);
+    opacity: 0; } }
+
+@-webkit-keyframes flash {
+  from, to {
+    color: inherit;
+    -webkit-transform: translateX(0); }
+
+  35% {
+    color: #f8645a;
+    -webkit-transform: translateX(-0.75em); } }
+
+@-moz-keyframes flash {
+  from, to {
+    color: inherit;
+    -moz-transform: translateX(0); }
+
+  35% {
+    color: #f8645a;
+    -moz-transform: translateX(-0.75em); } }
+
+@-ms-keyframes flash {
+  from, to {
+    color: inherit;
+    -ms-transform: translateX(0); }
+
+  35% {
+    color: #f8645a;
+    -ms-transform: translateX(-0.75em); } }
+
+@-o-keyframes flash {
+  from, to {
+    color: inherit;
+    -o-transform: translateX(0); }
+
+  35% {
+    color: #f8645a;
+    -o-transform: translateX(-0.75em); } }
+
+@keyframes flash {
+  from, to {
+    color: inherit;
+    transform: translateX(0); }
+
+  35% {
+    color: #f8645a;
+    transform: translateX(-0.75em); } }
+
+@-webkit-keyframes spin {
+  from {
+    -webkit-transform: rotate(0deg); }
+
+  to {
+    -webkit-transform: rotate(359deg); } }
+
+@-moz-keyframes spin {
+  from {
+    -moz-transform: rotate(0deg); }
+
+  to {
+    -moz-transform: rotate(359deg); } }
+
+@-o-keyframes spin {
+  from {
+    -o-transform: rotate(0deg); }
+
+  to {
+    -o-transform: rotate(359deg); } }
+
+@-ms-keyframes spin {
+  from {
+    -ms-transform: rotate(0deg); }
+
+  to {
+    -ms-transform: rotate(359deg); } }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg); }
+
+  to {
+    transform: rotate(359deg); } }
