--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,3 +1,4 @@
+<a id="avatar" href="{{ root_url }}/"></a>   
 <hgroup>
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
