add. 文章内容首行缩进两个字符

--- a/.themes/classic/sass/partials/_blog.scss
+++ b/.themes/classic/sass/partials/_blog.scss
@@ -105,6 +105,14 @@ article {
     font-weight: bold;
   }
 
+  .entry-content > p {
+    text-indent:2em; 
+  }
+
+  .entry-content > p > * {
+    text-indent:0em; 
+  }
+
 }
 article + article {
   .blog-index & {
